# poker-proto

./: MANIFEST.in  README.md  build.py  pyroject.toml  setup.cfg
.github/workflows/: main.yml
actions/setup-protobuf/: action.yml
proto/: card.proto
proto/v1/: card.proto
