[metadata]
name=poker-proto

[options]
setup_requires =
    protobuf_distutils
packages = find_namespace:
install_requires =
    protobuf
package_dir =
    =src

[options.package_data]
build =
    py.typed

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[generate_py_protobufs]
source_dir = proto
output_dir = src/poker/proto